# PinballProject

./: .gitignore  CMakeLists.txt  CMakePresets.json
Models/: pinball table.blend  pinball table.blend1  pinballTable.mtl  pinballTable2.mtl
Pinball/: Camera.cpp  Camera.hpp  GameObject.hpp  ModelManager.cpp  ModelManager.hpp  Physics.cpp  Physics.hpp  Renderer.cpp  Renderer.hpp  main.cpp
